[gd_scene load_steps=11 format=3 uid="uid://dkskpavqya0o2"]

[ext_resource type="PackedScene" uid="uid://1o34vldnsbvu" path="res://scenes/world_layer.tscn" id="1_pw63i"]
[ext_resource type="PackedScene" uid="uid://cklq6bjwo3103" path="res://scenes/world_overlay_layer.tscn" id="1_w2twt"]
[ext_resource type="Script" uid="uid://ceu81b8kl6i2e" path="res://scripts/components/interfaces.gd" id="2_e1cbu"]
[ext_resource type="PackedScene" uid="uid://vujmsguh4n3" path="res://scenes/wo_models_layer.tscn" id="3_6wevv"]
[ext_resource type="PackedScene" uid="uid://yctp56figf5i" path="res://scenes/sidebar_layer.tscn" id="6_4w45t"]
[ext_resource type="PackedScene" uid="uid://cgpr7bakr25xp" path="res://scenes/side_store_layer.tscn" id="7_r6p65"]
[ext_resource type="PackedScene" uid="uid://bxw6bou2o7loj" path="res://scenes/side_dimensions_layer.tscn" id="8_si52b"]
[ext_resource type="PackedScene" uid="uid://48r4mu6p1wfm" path="res://scenes/side_import_layer.tscn" id="9_01n6w"]
[ext_resource type="PackedScene" uid="uid://8xqixf1ah4kx" path="res://scenes/side_save_layer.tscn" id="10_6u1mn"]
[ext_resource type="PackedScene" uid="uid://b8ia8h81yorst" path="res://scenes/store_layer_downloads.tscn" id="10_6wevv"]

[node name="MainScene" type="Node"]

[node name="World" type="Node" parent="."]

[node name="WorldLayer" parent="World" instance=ExtResource("1_pw63i")]

[node name="Interfaces" type="Node" parent="."]
script = ExtResource("2_e1cbu")
main_menu_scene = "uid://6qqjyxoxx3c6"

[node name="WorldOverlayLayer" parent="Interfaces" instance=ExtResource("1_w2twt")]
unique_name_in_owner = true
visible = false

[node name="WO_ModelsLayer" parent="Interfaces" instance=ExtResource("3_6wevv")]
unique_name_in_owner = true
visible = false

[node name="SidebarLayer" parent="Interfaces" instance=ExtResource("6_4w45t")]
unique_name_in_owner = true
visible = false

[node name="Side_StoreLayer" parent="Interfaces" instance=ExtResource("7_r6p65")]
unique_name_in_owner = true
visible = false

[node name="Side_DimensionsLayer" parent="Interfaces" instance=ExtResource("8_si52b")]
unique_name_in_owner = true
visible = false

[node name="Side_ImportLayer" parent="Interfaces" instance=ExtResource("9_01n6w")]
unique_name_in_owner = true
visible = false

[node name="Side_SaveLayer" parent="Interfaces" instance=ExtResource("10_6u1mn")]
unique_name_in_owner = true
visible = false

[node name="StoreLayer_Downloads" parent="Interfaces" instance=ExtResource("10_6wevv")]
unique_name_in_owner = true
visible = false
